[gd_scene load_steps=12 format=3 uid="uid://bfo3b35ok7nub"]

[ext_resource type="Script" path="res://Game/Scenes/Player/Player.gd" id="1_xwn53"]
[ext_resource type="PackedScene" uid="uid://ca4cwklqvmbsc" path="res://Game/Scenes/Player/GunCast/gun_cast.tscn" id="2_yawvl"]
[ext_resource type="Texture2D" uid="uid://cdt5b41aehq4l" path="res://Game/Images/crosshair/PNG/White/crosshair177.png" id="3_wigas"]
[ext_resource type="Texture2D" uid="uid://c4qxeymi5rmeh" path="res://Game/Images/crosshair/PNG/Outline Retina/crosshair052.png" id="4_fa03f"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pr6lj"]
radius = 0.25

[sub_resource type="CapsuleMesh" id="CapsuleMesh_sirpi"]
radius = 0.4

[sub_resource type="GDScript" id="GDScript_0ri5i"]
script/source = "extends Label


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	text = str(get_tree().root.get_node(\"/root/Game\").score)
"

[sub_resource type="Animation" id="Animation_031ax"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/UI/CenterContainer/CrossHairNorm:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/UI/CenterContainer/CrossHairZoom:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mmn1b"]
resource_name = "Zoom"
length = 0.04
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/UI/CenterContainer/CrossHairNorm:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/UI/CenterContainer/CrossHairZoom:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.02, 0.03),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_knhga"]
resource_name = "Zoom_out"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/UI/CenterContainer/CrossHairNorm:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/UI/CenterContainer/CrossHairZoom:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_syb8b"]
_data = {
"RESET": SubResource("Animation_031ax"),
"Zoom": SubResource("Animation_mmn1b"),
"Zoom_out": SubResource("Animation_knhga")
}

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, 5)
script = ExtResource("1_xwn53")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_pr6lj")

[node name="CollisionShape3D2" type="CSGMesh3D" parent="."]
mesh = SubResource("CapsuleMesh_sirpi")

[node name="CamNode" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.679878, 0)

[node name="Camera3D" type="Camera3D" parent="CamNode"]
doppler_tracking = 1
current = true

[node name="AudioListener3D" type="AudioListener3D" parent="CamNode/Camera3D"]
current = true

[node name="GunCast" parent="CamNode/Camera3D" instance=ExtResource("2_yawvl")]

[node name="PlayerUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="PlayerUI"]

[node name="UI" type="Control" parent="PlayerUI/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PlayerUI/CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PlayerUI/CanvasLayer/UI/CenterContainer"]
visible = false
custom_minimum_size = Vector2(2, 2)
layout_mode = 2

[node name="CrossHairNorm" type="TextureRect" parent="PlayerUI/CanvasLayer/UI/CenterContainer"]
layout_mode = 2
texture = ExtResource("3_wigas")

[node name="CrossHairZoom" type="TextureRect" parent="PlayerUI/CanvasLayer/UI/CenterContainer"]
visible = false
layout_mode = 2
texture = ExtResource("4_fa03f")

[node name="Score" type="VBoxContainer" parent="PlayerUI/CanvasLayer/UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="PlayerUI/CanvasLayer/UI/Score"]
layout_mode = 2
text = "Score:"

[node name="ScoreCount" type="Label" parent="PlayerUI/CanvasLayer/UI/Score"]
layout_mode = 2
text = "1234"
script = SubResource("GDScript_0ri5i")

[node name="AnimUI" type="AnimationPlayer" parent="PlayerUI"]
libraries = {
"": SubResource("AnimationLibrary_syb8b")
}
